<resources>
    <string name="app_name">Vehicle Rent</string>
    <string name="whole_day">Whole Day</string>
    <string name="route">Route</string>
    <string name="tk">৳</string>
    <string name="_7_feet_1_ton_open">7 Feet 1 Ton (Open)</string>
    <string name="_750">750</string>
    <string name="small_quantities_of_goods_electronics_hardware">Small quantities of goods, electronics, hardware...</string>
    <string name="icon">icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="helpline">Helpline</string>
    <string name="promo_codes">Promo Codes</string>
    <string name="address_book">Address Book</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="_8801881269553">+8801881269553</string>
    <string name="saimul_hoque">Saimul Hoque</string>
    <string name="settings">Settings</string>
    <string name="inbox">Inbox</string>
    <string name="trip">Trip</string>
    <string name="home">Home</string>
    <string name="create_new_trip">Create New Trip</string>
    <string name="no_current_trip">No Current Trip</string>
    <string name="your_vehicle_photo">Your Vehicle Photo</string>
    <string name="upload">Upload</string>
    <string name="your_nid_photo">Your NID Photo</string>
    <string name="load_location">Load Location</string>
    <string name="load_locations"><u>Load Location:</u></string>
    <string name="unload_location">Unload Location</string>
    <string name="unload_locations"><u>Unload Location:</u></string>
    <string name="no_notification">No Notification</string>
    <string name="next">Next</string>
    <string name="set_your_location">Set Your Location</string>
    <string name="address">Address</string>
    <string name="reference_code_optional">Reference Code (Optional)</string>
    <string name="nid_no">NID No</string>
    <string name="vehicle_registration_no">Vehicle Registration No</string>
    <string name="mobile_no">Mobile No</string>
    <string name="username">Username</string>
    <string name="trip_donor">Trip Donor</string>
    <string name="trip_recipient">Trip Recipient</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_sent_otp_on_your_number">We have sent OTP on your number</string>
    <string name="submit">Submit</string>
    <string name="or">Or</string>
    <string name="verify">Verify</string>
    <string name="privacy">Vehicle Rent private company Limited by shares being “Vehicle Rent Limited”, hereinafter TL, with its Head Office at 107, Motijheel C/A, Dhaka-1000, Bangladesh, has concluded – directly or through its subsidiaries – partnership agreements with privileged groups of truck owners, drivers, agencies, shippers and other related entities, hereinafter referred to as “Partner(s)” so as to constitute a national network. The company, TL, has developed, under the brand, “Truck Lagbe”, a mobile/web based online platform, hereinafter designated as, “Application”, as well as a website at the address, https://www.trucklagbe.com. PRIVACY AND DATA PROTECTION ACT The information gathered by TL for the Service is subject to data processing intended for the implementation of the Service. This information is required in order for TL to process requests for Transportations and is recorded in its files. Security measures preserving confidentiality are implemented by TL. The User is informed and accepts that TL and the Partner reserve the right to retain, for evidence purposes, all information relating to requests received, the identification data of the User and completed Transportations (including phone number, name and address, email address, details of the completed Transportation) and TL may use personal data to contact the User by email, sms, push notification, or any other means concerning commercial offers related to the service that may be of interest. TL newsletters/promotions/offers that will be sent to the User will include an unsubscribe link should the User wish to withdraw from the list. In accordance with the “Data Protection” law, the User has the right to access, modify, rectify and delete personal data. When contacting for any request, the User shall mention their name and mobile phone number and enclose a copy of their ID to the below mentioned address. by email: legal@trucklagbe.com by post: Truck Lagbe Limited 107, Motijheel C/A Dhaka 1000, Bangladesh SPECIFIC PROVISIONS FOR THE LINKING BY THE SMARTPHONE/TABLET/WEB-BASED APPLICATION Cookie The User agrees having been advised that TL may be required to implement “cookies” to identify the User for the duration of the session on the website. This memory-resident cookie remains active as long as the User has not left the session. The User can object to the use of this cookie without limiting their ability to access the site by configuring their browser appropriately. Data TL collects include The data user provides while creating or updating their TL accounts. This may include their name, email, phone number, login name, profile picture, payment or banking information (including related payment verification information), government identification documents, including driver’s license numbers and images, birthdate, signature, and photo. This also includes vehicle or insurance information of drivers and delivery partners, and user settings. We may use the photos, phone number, NID submitted by drivers and/or delivery partners to verify their identities, such as through facial recognition technologies. The information users submit when they contact TL customer support, provide ratings or compliments. This may include feedback, photographs, hotline conversations or other recordings collected by users. Precise or approximate location data from a user’s mobile device if enabled by the user to do so. When the TL app is running in the foreground (app open and on-screen) or background (app open but not on-screen) of users’ mobile device. However we don’t take locations from the devices for running the service where users did not provide permission. Some of our features can hamper because of the lack of location permission. In addition, the location data collected from a driver or rental device during a trip will be linked to the customer’s account, even if they have not enabled location data to be collected from their device, including for purposes of receipt generation, customer support, fraud detection, insurance, and litigation. Transaction information related to the use of our services, including the type of services requested or provided, order details, delivery information, date and time the service was provided, amount charged and payment method. Additionally, if someone uses your promotion code, we may associate your name with that person. Users’ interaction data with our services. This includes data such as access dates and times, app features or pages viewed, app crashes and other system activity, type of browser, and third-party sites or services used before interacting with our services. In some cases, we collect this data through cookies, pixels, tags, and similar tracking technologies that create and maintain unique identifiers. The devices used to access our services, including the hardware models, device IP address, operating systems and versions, software, preferred languages, unique device identifiers, advertising identifiers, serial numbers, device motion data, and mobile network data. Publicly available sources Marketing service providers. How TL uses data To provide reliable and convenient transportation, delivery, and other products and services. To enhance the safety and security of our users and services For customer support For research and development To enable communications between users To send marketing and non-marketing communications to users In connection with legal proceedings TL does not sell or share user personal data with third parties for their direct marketing, except with users’ consent. Update The Company reserves the right to add, revise, amend, modify or delete any part of this Policy (in part or in full) at its discretion. The updated version of this Policy in force will be posted on the Company’s website from time to time. In the event of any change in the Act or the Rules or in case of any requirement arising under any of the applicable law, this Policy shall be deemed to be amended or modified to the extent necessary to comply with such amendment to the Act or the Rules or to meet any requirement under the applicable laws.</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_size">Vehicle Size</string>
    <string name="vehicle_capacity">Vehicle Capacity</string>
    <string name="product_details"><u>Product Details:</u></string>
    <string name="trip_time"><u>Trip Time:</u></string>
    <string name="additional">Additional</string>
    <string name="select_your_trip_date_amp_time"><![CDATA[Select Your Trip Date & Time]]></string>
    <string name="select_trip_date"><u>Select Trip Date</u></string>
    <string name="select_trip_time"><u>Select Trip Time</u></string>
    <string name="update">Update</string>
    <string-array name="VehicleCapacity">
        <item>10 CBM</item>
        <item>9 CBM</item>
        <item>8 CBM</item>
        <item>7 CBM</item>
        <item>6 CBM</item>
        <item>5 CBM</item>
        <item>4 CBM</item>
        <item>0.9 CBM</item>
        <item>0.7 CBM</item>
        <item>0.5 CBM</item>
        <item>0.3 CBM</item>
        <item>750 CFT</item>
        <item>700 CFT</item>
        <item>650CFT</item>
        <item>600CFT</item>
        <item>550CFT</item>
        <item>500CFT</item>
        <item>450CFT</item>
        <item>400CFT</item>
        <item>350CFT</item>
        <item>300CFT</item>
        <item>250CFT</item>
        <item>200CFT</item>
        <item>180CFT</item>
        <item>40 Ton+</item>
        <item>40 Ton</item>
        <item>35 Ton</item>
        <item>30 Ton</item>
        <item>28 Ton</item>
        <item>26 Ton</item>
        <item>25 Ton</item>
        <item>24 Ton</item>
        <item>23 Ton</item>
        <item>22 Ton</item>
        <item>21 Ton</item>
        <item>20 Ton</item>
        <item>19 Ton</item>
        <item>18 Ton</item>
        <item>17 Ton</item>
        <item>16 Ton</item>
        <item>15 Ton</item>
        <item>14 Ton</item>
        <item>13 Ton</item>
        <item>12.5 Ton</item>
        <item>12 Ton</item>
        <item>11 Ton</item>
        <item>10 Ton</item>
        <item>9 Ton</item>
        <item>8 Ton</item>
        <item>7 Ton</item>
        <item>6 Ton</item>
        <item>5 Ton</item>
        <item>4 Ton</item>
        <item>3 Ton</item>
        <item>2 Ton</item>
        <item>1 Ton</item>
        <item>Any</item>
    </string-array>
    <string-array name="VehicleType">
        <item>Truck Mounted Crane</item>
        <item>Crane</item>
        <item>Water Tanker</item>
        <item>Excavator</item>
        <item>Prime Mover (Low Bed)</item>
        <item>Prime Mover (Semi Low Bed)</item>
        <item>Prime Mover (High Bed)</item>
        <item>Dump Truck</item>
        <item>Heavy Covered Van</item>
        <item>Medium Covered Van</item>
        <item>Covered Pickup</item>
        <item>Heavy Truck (Open)</item>
        <item>Medium Truck (Open)</item>
        <item>Pickup (Open)</item>
        <item>Any</item>
    </string-array>
</resources>