<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/vehicleimage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/opentruck"
            android:layout_marginEnd="10dp"
            android:contentDescription="icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp">
            <TextView
                android:id="@+id/vehicletitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_7_feet_1_ton_open"
                android:textColor="@color/black"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/vehicledescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/small_quantities_of_goods_electronics_hardware"
                android:textColor="@color/black"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tk"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:layout_marginEnd="3dp"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_750"
                android:textColor="@color/black"
                android:textSize="19sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>