<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.forbitbd.fragments.DonorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/userphoto"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="@color/teal_700"
            app:civ_border_width="3dp"
            app:civ_shadow="true"
            android:layout_gravity="center"
            app:civ_shadow_radius="3dp"
            android:layout_marginTop="10dp"
            app:civ_shadow_color="@color/teal_700"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/upload"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textColorHint="#BABABA">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#BABABA"
            app:hintEnabled="false"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/mobile_no"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textColorHint="#BABABA"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/useraddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/address"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textColorHint="#BABABA"
            android:layout_marginTop="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/reference_code_optional"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Continue"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>