<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DateTimeActivity"
    android:layout_marginBottom="47dp"
    android:background="@color/teal_700">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:shapeAppearance="@style/ShapeAppearance.MyApp.MediumComponent.Rounded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_your_trip_date_amp_time"
                android:textColor="#FF0000"
                android:textSize="20sp"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_trip_date"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_trip_time"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="center"/>

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Confirm"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>