<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.forbitbd.fragments.HomeFragment">

    <fragment
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        map:cameraZoom="13"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:shapeAppearance="@style/ShapeAppearance.MyApp.MediumComponent.Rounded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_navigation"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/set_your_location"
                android:textColor="#FF0000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/load_location"
                android:textColorHint="#BABABA"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_arrow_circle_up_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loadlocatiom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/unload_location"
                android:textColorHint="#BABABA"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_arrow_circle_down_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/unloadlocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Address Book"
                    android:visibility="gone"/>

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Map"
                    android:visibility="gone"/>

            </com.google.android.material.chip.ChipGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:text="@string/next"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>